--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,10 +149,10 @@ a {
       transform: translateX(0);
     }
     49% {
-      transform: translateX(-200%);
+      transform: translateX(-140%);
     }
     50% {
-      transform: translateX(200%);
+      transform: translateX(140%);
     }
     100% {
       transform: translateX(0);
